# wevibe-mcp

./: .env.example  .gitignore  .npmignore  Dockerfile  README.md  ROADMAP.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts  vitest.integration.config.ts  wevibe-mcp-launcher.sh
.github/: dependabot.yml
docs/: PDP.md  TOPOLOGY.md  WHITEPAPER.md
opencode-plugin/: wevibe.tsx
prompts/: extraction.md  keyword-extraction.md
scripts/: wevibe-steg-scan.py
src/: admin.ts  artifact-extract.ts  artifact-policy.ts  artifact-transform.ts  attestation.ts  auth.ts  biometric.ts  blacklist.ts  canonical.ts  config.ts  contribution.ts  crypto-utils.ts  crypto.ts  dashboard-server.ts  denial-queue.ts  deserialize.ts  embed-card.ts  embedding-config.ts  embedding.ts  extract-jobs.ts  extraction-presets.ts  extraction.ts  guard.ts  http-server.ts  hub-fetch.ts  hub-resolver.ts  identity-runtime.ts  identity-sidecar.ts  key-store.ts  keychain.ts  llm-ollama.ts  llm-openai-compat.ts  llm-sampling.ts  llm.ts  logger.ts  manifest.ts  model-context.ts  moderation.ts  ocr-sanitize.ts  openrouter-catalog.ts  (+18 more)
tests/: artifact-extract.test.ts  artifact-policy.test.ts  artifact-transform.test.ts  bind.test.ts  biometric.test.ts  blacklist.test.ts  canonical.test.ts  contribution.test.ts  deserialize.test.ts  egress-policy.test.ts  embed-card.test.ts  embedding-config.test.ts  embedding-prefix.test.ts  embedding.test.ts  env-flag.test.ts  extract-defaults.test.ts  extract-jobs.test.ts  extraction-presets.test.ts  extraction.test.ts  guard.test.ts  (+37 more)
(+27 files in other folders)
