[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wevibe-mcp"
version = "0.2.0"
description = "MCP client for WeVibe Network — org-scoped encrypted process memory"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
    "wevibe-sdk>=0.1.0",
    "wevibe-guard>=0.1.0",
]

[project.scripts]
wevibe-mcp = "wevibe_mcp.server:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.3"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["wevibe_mcp"]
